microservices/score-gateway-microservice/openshift/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: score-gateway
    group: fn-dg-os
  name: score-gateway
spec:
  replicas: 1
  selector:
    app: score-gateway
    group: fn-dg-os
  template:
    metadata:
      labels:
        app: score-gateway
        group: fn-dg-os
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
          image: score-gateway/score-gateway
          imagePullPolicy: IfNotPresent
          name: vertx
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
          readinessProbe:
              failureThreshold: 3
              httpGet:
                path: /health
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
          livenessProbe:
              failureThreshold: 3
              httpGet:
                path: /health
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 10
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - vertx
        from:
          kind: ImageStreamTag
          name: 'score-gateway:latest'
      type: ImageChange
