microservices/score-gateway-microservice/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: score-gateway
    group: fn-dg-os
  name: score-gateway
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: score-gateway
    group: fn-dg-os
